fixed view of social links on mobile phones... adjusted height of elements

--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,6 @@ small phones
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin-top: 4em;
     }
 
     #projects-section {
@@ -571,6 +570,10 @@ small phones
         margin: auto;
         top: 3em;
 
+    }
+
+    .link-element{
+        height: 5em !important;
     }
 
 }
